# some-opengl-game

./: CMakeLists.txt
res/shaders/: vSprite.txt  vertex.txt
src/: main.cpp
src/Renderer/: AnimatedSprite.cpp  AnimatedSprite.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
